--- a/Assignment2/Assignment2/R_Week2_1.Rmd
+++ b/Assignment2/Assignment2/R_Week2_1.Rmd
@@ -38,6 +38,8 @@ penguins_summary<-penguins%>%group_by(species)%>%summarize(bill=round(mean(bill_
 print(penguins_summary)
 ```
 * **Create narrow data**
+
+利用pivot_longer()函数
 ```{r}
 penguins_summary_wide<-penguins_summary
 penguins_summary_narrow<-penguins_summary_wide%>%pivot_longer(c(bill,flipper,weight),names_to='property',values_to='value')
@@ -45,6 +47,8 @@ penguins_summary_narrow
 ```
 
 * **Narrow to Wide data**
+
+利用pivot_wider()函数
 ```{r}
 penguins_summary_wide<-penguins_summary_narrow%>%pivot_wider(names_from=property,values_from=value)
 print(penguins_summary_wide)
@@ -56,12 +60,16 @@ print(penguins_summary_wide)
 * Unite: paste together multiple columns into one
 
 **Unite**
+
+* take advantages of unite() function.
 ```{r}
 uni_df<-penguins_summary%>%
   unite(flipper_over_weight,flipper,weight,sep='/')
 print(uni_df)
 ```
 **Separate**
+
+* take advantages of seperate() function.
 ```{r}
 sep_df<-uni_df%>%separate(flipper_over_weight,into=c("flipper","weight"),sep="/")
 print(sep_df)
@@ -139,12 +147,16 @@ cor_func<-function(x){cor(x,v_col,use='complete.obs')}# a function that computes
 correlations<-unlist(map(df_num,cor_func))# compute correlations with all other numeric columns (with map)
 
 print('the computed correlations are:');print(correlations)
+```
 
+
+```{r}
 max_abs_cor_var<-names(which(abs(correlations)==max(abs(correlations)))) # extract the name of the column with max correlation
 
 cor_val<-as.double(correlations[max_abs_cor_var])
 
-print('\ncolumn with maximal correlation:');print(max_abs_cor_var)
+print('\ncolumn with maximal correlation:');print(max_abs_cor_var);
+print(cor_val)
 ```
 
 Define a function called **max_cor_var**, the body of this function is copied from the previous script:
